# agentspace-agent-registrar

./: .gitignore  README.md  agent_engine_client.py  agent_engine_manager.py  as_agent_registry_service.py  as_registry_client.py  authorization_service.py  config_template.json  pyproject.toml
src/agentspace_registrar/: exceptions.py
src/agentspace_registrar/cli/: base.py  main.py
src/agentspace_registrar/cli/commands/: auth.py  engine.py  registry.py
src/agentspace_registrar/config/: manager.py  models.py
src/agentspace_registrar/services/: agent_engine.py  agent_registry.py  authorization.py
src/agentspace_registrar/utils/: auth.py  output.py
